fix: remove map card border and shadow on mobile

--- a/src/features/map/Home.module.scss
+++ b/src/features/map/Home.module.scss
@@ -25,7 +25,8 @@
   }
 
   .mapContainer {
-    border-radius: 8px;
-    margin: 0 -0.5rem;
+    border-radius: 0;
+    box-shadow: none;
+    margin: 0 -1rem;
   }
 }
